[project]
name = "prima"
version = "0.1.1"
authors = [{ name = "Jordi Sassoon", email = "jordisassoon@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
  "uvicorn",
  "scikit-learn"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []